Made tabPane selection radio buttons actually look like tabs. This buys valuable screen real estate

--- a/www/index.html
+++ b/www/index.html
@@ -6,19 +6,15 @@
         <title>messaging demo</title>
         <meta name="description" content="action messaging">
         <script type="text/javascript" data-main="appscripts/main.js" src="jslibs/require.js"></script>
+
+        <meta name="viewport" content="initial-scale=1.0">
     </head>
     <body >
     <div id="wrapper">
 
         <div id="app">
             <h3> Shared Scrolling "Anticipatory" Score </h3><br>
-            <div id="test_intro">  
-            Join a room to share your sonic scribbles with others. Tested with Chrome and Safari on Macs, PCs, Andoird, tablets, and phones. <br>
-            If your device is not webAudio enabled, you can still be a "remote controller" in the space - to listen, just be within earshot of a webAudio device with a browser pointed to the same room.            
-            <br>
-            The server is in the States.
-            </div>
-            <div id="display">
+             <div id="display">
                 <div id="timeLabelDiv">
                     Time 
                 </div>
@@ -44,29 +40,6 @@
 
                         <span id="radioSelect">
                             <div id="radioSelectDiv">
-                               Input type:<br>
-                               <div>
-                                    <input type="radio"  name="radioSelect"  id="radioSpray" value="spray">
-                                    <label for="radioSpray">Event Spray</label><br>
-                                </div>
-                                <div>
-                                    <input type="radio"  name="radioSelect" id="radioContour" value="contour">
-                                    <label for="radioContour">Contour</label><br>
-                                </div>
-                                <div>
-                                    <input type="radio"  name="radioSelect" id="radioPitch" value="pitch">
-                                    <label for="radioPitch">Pitch</label><br> 
-                                </div>
-
-                                <div>
-                                    <input type="radio"  name="radioSelect" id="radioRhythm" value="rhythm">
-                                    <label for="radioRhythm">Rhythm</label><br> 
-                                </div>
-
-                               <div>
-                                    <input type="radio"  name="radioSelect" id="radioChord" value="chord">
-                                    <label for="radioChord">Chord</label><br> 
-                                </div>
 
 
                             </div>
