fairly stable tracks

--- a/www/index.html
+++ b/www/index.html
@@ -63,13 +63,16 @@
                         <div class="myTabs" id="chordTab">
                         </div>
 
-
-                        <div class="myTabs" id="contourTab">
-                            contour tab
-                        </div>
-
                         <div class="myTabs" id="sprayTab">
                             spray tab
+                        </div>
+
+                        <div class="myTabs" id="dynamicsTab">
+                            Dynamics
+                        </div>
+
+                        <div class="myTabs" id="tempoTab">
+                            Tempo
                         </div>
 
                     </span>
