all evenent and contour elements shared through the chat room. Also, GENERIC for plundering for dynamics score (soundbank still in, etc)

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 </head>
 <body >
 
-    <object data="images/test.svg" type="image/svg+xml"></object>
+   <!--  <object data="images/test.svg" type="image/svg+xml"></object> -->
     <!-- for testing svg files with the canvas (see rhythmEvent) -->
     <!-- <img id="testimg" src="images/test.svg"  > -->
 
