added general snakeEvent element, but didn't convert all elements type over to it yet

--- a/www/index.html
+++ b/www/index.html
@@ -63,8 +63,8 @@
                         <div class="myTabs" id="chordTab">
                         </div>
 
-                        <div class="myTabs" id="sprayTab">
-                            spray tab
+                        <div class="myTabs" id="snakeTab">
+                            snake tab
                         </div>
 
                         <div class="myTabs" id="dynamicsTab">
