Stable Casteels - all elements are snakeElements

--- a/www/index.html
+++ b/www/index.html
@@ -63,8 +63,7 @@
                         <div class="myTabs" id="chordTab">
                         </div>
 
-                        <div class="myTabs" id="snakeTab">
-                            snake tab
+                        <div class="myTabs" id="keyTab">
                         </div>
 
                         <div class="myTabs" id="dynamicsTab">
