orchestrartion element, highlighting selected tracks, etc

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/appstyle.css">
     <link rel="stylesheet" type="text/css" href="css/radiostyle.css">
 
-    <title>messaging demo</title>
+    <title>Anticipatory Score</title>
     <meta name="description" content="action messaging">
     <script type="text/javascript" data-main="appscripts/main.js" src="jslibs/require.js"></script>
 
@@ -18,7 +18,7 @@
     <!-- <img id="testimg" src="images/test.svg"  > -->
 
     <div id="app">
-        <h3> Shared Scrolling "Anticipatory" Score </h3><br>
+        <h3> Shared Scrolling "Anticipatory" Score </h3>
         <div id="display">
             <div id="timeLabelDiv">
                 Time 
@@ -31,7 +31,7 @@
                 <span id="sliderSpan">
                 (w) <br>
                     <canvas id="slidercanvas1"></canvas><br>
-                    (x)
+                (x)
                 </span>   
 
                 <span id="scoreSpan">
@@ -73,6 +73,9 @@
                         <div class="myTabs" id="tempoTab">
                             Tempo
                         </div>
+                        <div class="myTabs" id="orchTab">
+                        </div>
+
 
                     </span>
                 </div>  <!-- for tab panes -->
@@ -91,7 +94,7 @@
                 <p>You are in room: <input type="text" id="current_room" size="20"></p>
             </div>
 
-        </div><!-- display -->
+        </div><!-- control section -->
     </div>  
 
 </body>
