no longer displaying slider....started some timing and synch tests

--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,9 @@
             <div id="subapp">
 
                 <span id="sliderSpan">
-                (w) <br>
-                    <canvas id="slidercanvas1"></canvas><br>
-                (x)
+
+                    <canvas id="slidercanvas1"></canvas>
+
                 </span>   
 
                 <span id="scoreSpan">
