--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/appstyle.css">
+    <link rel="stylesheet" type="text/css" href="css/appstyleFixed.css">
     <link rel="stylesheet" type="text/css" href="css/radiostyle.css">
 
     <title>Anticipatory Score</title>
